add empty state for widgets object to render in github

--- a/Project/102_category_flowers_AlexNet.ipynb
+++ b/Project/102_category_flowers_AlexNet.ipynb
@@ -1088,6 +1088,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
+        "state": {},
         "01c8c6125d0d449fb2e4d8ac3ef367f1": {
           "model_module": "@jupyter-widgets/controls",
           "model_module_version": "1.5.0",
